--- a/app/src/main/res/layout/activity_crear_grupo.xml
+++ b/app/src/main/res/layout/activity_crear_grupo.xml
@@ -9,13 +9,23 @@
     android:orientation="vertical">
 
 
-    <EditText
+    <androidx.emoji.widget.EmojiEditText
         android:id="@+id/nombregrupo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Nombre del grupo"
         android:inputType="textPersonName" />
+
+    <androidx.emoji.widget.EmojiButton
+        android:id="@+id/emobtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <androidx.emoji.widget.EmojiTextView
+        android:id="@+id/emojiresultado"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/my_recycler_view"
