--- a/app/src/main/res/layout/item_usuarios.xml
+++ b/app/src/main/res/layout/item_usuarios.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <CheckedTextView
         android:id="@+id/checked_text_view"
         android:layout_width="match_parent"
@@ -16,4 +17,5 @@
         android:drawableEnd="@null"
         android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
         android:drawableRight="@null" />
-</LinearLayout>
+
+</androidx.cardview.widget.CardView>
