--- a/app/src/main/res/layout/activity_conversacion.xml
+++ b/app/src/main/res/layout/activity_conversacion.xml
@@ -69,7 +69,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <EditText
+        <androidx.emoji.widget.EmojiEditText
             android:id="@+id/etTexto"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
