Corregido insercion de mensajes e implementacion de los emojis, se agrega fondo al chat

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#e67e22</color>
+    <color name="colorPrimary">#da8c40</color>
     <color name="colorPrimaryDark">#d35400</color>
     <color name="colorAccent">#fff</color>
     <color name="darkWhite">#cfd8dc</color>
