--- a/app/src/main/res/layout/item_rv_mensajes.xml
+++ b/app/src/main/res/layout/item_rv_mensajes.xml
@@ -13,43 +13,41 @@
         android:orientation="vertical">
 
 
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/usuario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_weight="1"
+            android:text="Usuario"
+            android:textSize="22sp"
+            android:textStyle="bold" />
 
+        <TextView
+            android:id="@+id/mensaje"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
 
-            <TextView
-                android:id="@+id/usuario"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="Mensaje"
 
-                android:gravity="center_vertical"
-                android:text="Usuario"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
-                android:textSize="16sp"
-                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/fechahora"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="FechaHora" />
 
-            <TextView
-                android:id="@+id/mensaje"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Mensaje"
-                android:textSize="22sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/fechahora"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="FechaHora" />
-
-
-        </LinearLayout>
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/email"
+            android:visibility="invisible"/>
 
 
     </LinearLayout>
