--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,6 +35,7 @@
     <color name="dot_light_screen2">#e55039</color>
     <color name="dot_light_screen3">#82ccdd</color>
     <color name="dot_light_screen4">#38ada9</color>
+    <color name="background">#e9e3dd</color>
 
     <array name="array_dot_active">
         <item>@color/dot_light_screen1</item>
