Agregada funcionalidad de identificar el tipo de mensaje y a su vez la descarga de las imagenes

--- a/app/src/main/res/layout/item_rv_mensajes.xml
+++ b/app/src/main/res/layout/item_rv_mensajes.xml
@@ -127,6 +127,15 @@
             android:layout_height="300dp"
             android:visibility="invisible" />
 
+        <TextView
+            android:id="@+id/documento"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/cardview_image"
+            android:visibility="visible"
+            android:layout_below="@id/fechahora"
+            />
+
     </RelativeLayout>
 
 
