--- a/app/src/main/res/layout/activity_conversacion.xml
+++ b/app/src/main/res/layout/activity_conversacion.xml
@@ -97,12 +97,12 @@
 
 
         <ImageView
-            android:id="@+id/button"
+            android:id="@+id/btnsubir"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:src="@drawable/emoji_1f696" />
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/ic_clip"/>
 
         <Button
             android:id="@+id/btnEnviar"
