--- a/app/src/main/res/layout/item_rv_mensajes.xml
+++ b/app/src/main/res/layout/item_rv_mensajes.xml
@@ -6,8 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     app:cardCornerRadius="8dp">
-
-    <!--LinearLayout
+  <!--LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
@@ -93,7 +92,7 @@
             android:src="@drawable/perfil" />
 
         <TextView
-            android:id="@+id/mensaje"
+            android:id="@+id/mensajetexto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -106,7 +105,7 @@
             android:id="@+id/usuario"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/mensaje"
+            android:layout_below="@+id/mensajetexto"
             android:layout_toRightOf="@+id/cardview_image"
             android:text="Free android tutorials and examples for beginners and expert."
             android:textColor="#8b8b8b" />
@@ -120,12 +119,7 @@
             android:text="Free android tutorials and examples for beginners and expert."
             android:textColor="#8b8b8b" />
 
-        <ImageView
-            android:layout_below="@+id/fechahora"
-            android:id="@+id/imageView"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:visibility="invisible" />
+
 
         <TextView
             android:id="@+id/documento"
@@ -135,6 +129,66 @@
             android:visibility="visible"
             android:layout_below="@id/fechahora"
             />
+
+        <ImageView
+            android:layout_below="@+id/fechahora"
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:visibility="invisible"
+            android:layout_toRightOf="@+id/cardview_image"/>
+
+        <LinearLayout
+            android:id="@+id/documentoword"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/fechahora"
+            android:layout_toRightOf="@id/cardview_image"
+            android:orientation="horizontal"
+            android:weightSum="10"
+            android:visibility="invisible">
+
+
+            <Button
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_weight="3"
+                android:background="@drawable/word" />
+
+            <TextView
+                android:id="@+id/nombredoc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="7"
+                android:text="TextView" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/documentopdf"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/fechahora"
+            android:layout_toRightOf="@id/cardview_image"
+            android:orientation="horizontal"
+            android:weightSum="10"
+            android:visibility="invisible">
+
+
+            <Button
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_weight="3"
+                android:background="@drawable/pdf" />
+
+            <TextView
+                android:id="@+id/nombrepdf"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="7"
+                android:text="TextView" />
+        </LinearLayout>
+
 
     </RelativeLayout>
 
