--- a/app/src/main/res/layout/item_message_right.xml
+++ b/app/src/main/res/layout/item_message_right.xml
@@ -1,60 +1,108 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:emojicon="http://schemas.android.com/apk/res-auto"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/lecture_voice"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:paddingBottom="5dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp">
+    android:layout_margin="9dp">
 
-    <ImageView
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:id="@+id/ivUserChat"
-        android:layout_alignBottom="@+id/contentMessageChat" />
-
-    <me.himanshusoni.chatmessageview.ChatMessageView
-        android:layout_toLeftOf="@+id/ivUserChat"
-        android:layout_toStartOf="@+id/ivUserChat"
-        android:id="@+id/contentMessageChat"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cmv_arrowGravity="end"
-        app:cmv_arrowMargin="3dp"
-        app:cmv_arrowPosition="right"
-        app:cmv_backgroundColor="@color/colorAccent"
-        app:cmv_backgroundColorPressed="#FFBABABA"
-        app:cmv_contentPadding="10dp"
-        app:cmv_cornerRadius="3dp"
-        app:cmv_showArrow="true"
-       >
+        android:layout_margin="@dimen/lecture_voice__margin_card"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground">
 
-    <hani.momanii.supernova_emoji_library.Helper.EmojiconTextView
-        android:textColor="#fff"
-        android:textIsSelectable="true"
-        android:text="Alessandr sdlsdklsd \n slkdlskdlks \nsdlkslkds dsdso"
-        android:id="@+id/txtMessage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        emojicon:emojiconSize="28sp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/lecture_voice__margin_card"
+            android:layout_marginBottom="@dimen/lecture_voice__margin_card">
 
-    </me.himanshusoni.chatmessageview.ChatMessageView>
+            <LinearLayout
+                android:id="@+id/layoutVoiceInfo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/grid_annotation_margin"
+                android:orientation="horizontal">
 
-    <TextView
-        android:text="22/06/2016"
-        android:id="@+id/timestamp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@id/contentMessageChat"
-        android:layout_below="@id/contentMessageChat"
-        android:layout_marginBottom="25dp"
-        android:padding="10dp"
-        android:textSize="10sp" />
+                <TextView
+                    android:id="@+id/voice_duration"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
 
+            </LinearLayout>
+
+            <RelativeLayout
+                android:id="@+id/layoutVoice"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/layoutVoiceInfo"
+                android:gravity="center_vertical"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin">
+
+                <ImageButton
+                    android:id="@+id/playButton"
+                    android:layout_width="@dimen/lecture_voice_icon"
+                    android:layout_height="@dimen/lecture_voice_icon"
+                    android:background="@android:color/transparent"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/ic_play" />
+
+                <LinearLayout
+                    android:id="@+id/layoutVoiceSeekbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_toRightOf="@+id/playButton"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginTop="@dimen/activity_horizontal_margin">
+
+                    <SeekBar
+                        android:id="@+id/seekBarDuration"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:layout_marginRight="@dimen/activity_horizontal_margin" />
+
+                    <TextView
+                        android:id="@+id/voiceDurationPlayer"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="00:00"
+                        android:layout_gravity="right"
+                        android:layout_marginRight="@dimen/lecture_voice_text_duration_margin_right"/>
+                </LinearLayout>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/layoutVoiceNotFound"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/layoutVoiceInfo"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:visibility="gone">
+
+                <ImageView
+                    android:id="@+id/voiceView"
+                    android:layout_width="@dimen/lecture_voice_icon"
+                    android:layout_height="@dimen/lecture_voice_icon"
+                    android:src="@drawable/voice_not_found"
+                    android:scaleType="fitXY" />
+
+                <TextView
+                    android:id="@+id/voiceNotFound"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/voiceView"
+                    android:layout_centerInParent="true"
+                    android:text="@string/voice_not_found"
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
+            </RelativeLayout>
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
 </RelativeLayout>
