--- a/app/src/main/res/layout/item_rv_mensajes.xml
+++ b/app/src/main/res/layout/item_rv_mensajes.xml
@@ -188,6 +188,38 @@
                 android:layout_weight="7"
                 android:text="TextView" />
         </LinearLayout>
+        
+        <RelativeLayout
+            android:id="@+id/relativeaudio"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_below="@id/fechahora"
+            android:visibility="invisible">
+
+            <TextView
+                android:id="@+id/texttimer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="00:00"
+                android:layout_centerHorizontal="true"
+                />
+
+            <ImageButton
+                android:id="@+id/btn_play_pause"
+                android:layout_below="@+id/texttimer"
+                android:src="@drawable/ic_play"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            
+            <SeekBar
+                android:id="@+id/seekbar"
+                android:layout_below="@+id/btn_play_pause"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            
+
+        </RelativeLayout>
 
 
     </RelativeLayout>
