Agregada funcionalidad de microfono y guardado en firebase, todo funciona perfecto

--- a/app/src/main/res/layout/activity_conversacion.xml
+++ b/app/src/main/res/layout/activity_conversacion.xml
@@ -104,6 +104,33 @@
             android:layout_marginBottom="10dp"
             android:background="@drawable/ic_clip"/>
 
+        <ImageView
+            android:id="@+id/playmic"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/mic_on"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginRight="8dp"/>
+
+
+        <ImageView
+            android:id="@+id/stopmic"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/mic_off"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginRight="8dp"/>
+
         <Button
             android:id="@+id/btnEnviar"
             android:layout_width="40dp"
@@ -111,7 +138,6 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-
             android:background="@android:drawable/ic_menu_send"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
